# FlowCV

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt
examples/cli/: CMakeLists.txt  main.cpp
examples/ui/: CMakeLists.txt  application.h  drawing.cpp  drawing.h  main.cpp  node_editor.cpp  node_editor.h  widgets.cpp  widgets.h
plugins/: CMakeLists.txt
plugins/DataOutput/: CMakeLists.txt  CSV_File.cpp  CSV_File.hpp  OSC_Send.cpp  OSC_Send.hpp  Serial_Send.cpp  Serial_Send.hpp  TCP_Send.cpp  TCP_Send.hpp  UDP_Send.cpp  UDP_Send.hpp  serial_enumerator.hpp
plugins/DataOutput/linux/: List_Serial_Ports_Linux.cpp  List_Serial_Ports_Linux.hpp
plugins/DataOutput/macos/: List_Serial_Ports_Mac.cpp  List_Serial_Ports_Mac.hpp
plugins/DataOutput/win/: List_Serial_Ports_Win.cpp  List_Serial_Ports_Win.hpp
plugins/ImageLoader/: CMakeLists.txt  image_loader.cpp  image_loader.hpp
plugins/ImageWriter/: CMakeLists.txt  image_writer.cpp  image_writer.hpp
plugins/ShapeColorizer/: CMakeLists.txt  Shape_Colorizer.cpp  Shape_Colorizer.hpp
plugins/ShapeCounter/: CMakeLists.txt  Shape_Counter.cpp  Shape_Counter.hpp
plugins/SimpleBlobTracker/: CMakeLists.txt  simple_blob_tracker.cpp  simple_blob_tracker.hpp
plugins/VideoCapture/: CMakeLists.txt  camera_enumerator.cpp  video_capture.cpp  video_capture.hpp
plugins/VideoCapture/linux/: Camera_V4L.cpp  Camera_V4L.hpp
plugins/VideoCapture/macos/: Camera_MacOS.cpp  Camera_MacOS.hpp
plugins/VideoCapture/win/: Camera_MSMF.cpp  Camera_MSMF.hpp
plugins/VideoLoader/: CMakeLists.txt  video_loader.cpp  video_loader.hpp
plugins/VideoWriter/: CMakeLists.txt  video_writer.cpp  video_writer.hpp
src/: CMakeLists.txt  headless_main.cpp  main.cpp
src/Managers/: Internal_Node_Manager.cpp
src/Nodes/AddWeighted/: add_weighted.hpp
src/Nodes/Canny/: canny.hpp
src/Nodes/ColorReduce/: color_reduce.hpp
src/Nodes/Contours/: contours.hpp
src/Nodes/DNN/: dnn_human_pose.hpp  dnn_object_detection.hpp  dnn_text_detection.hpp
src/Nodes/DepthViewer3d/: depth_viewer_3D.hpp
src/Nodes/GetSize/: get_size.hpp
src/Nodes/JsonViewer/: json_viewer.hpp
src/Nodes/Magnitude/: magnitude.hpp
src/Nodes/Max/: max.hpp
src/Nodes/Mean/: mean.hpp
src/Nodes/PerspectiveWarp/: perspective_warp.hpp
src/Nodes/RndNoise/: rnd_noise.hpp
src/Nodes/Sharpen/: sharpen.hpp
src/Nodes/Split/: split.hpp
src/Nodes/Threshold/: threshold.hpp
src/cli/: CMakeLists.txt
src/core/: CoreApplication.cpp  CoreApplication.h  FlowCV_Properties.hpp  Properties.cpp  Types.cpp
src/managers/: FlowCV_Manager.cpp  FlowCV_Manager.hpp  Internal_Node_Manager.cpp  PluginManager.cpp
src/nodes/: internal_nodes.hpp
src/nodes/AbsDiff/: abs_diff.cpp  abs_diff.hpp
src/nodes/Add/: add.cpp  add.hpp
src/nodes/AddWeighted/: add_weighted.cpp  add_weighted.hpp
src/nodes/BackgroundSubtraction/: background_subtraction.cpp  background_subtraction.hpp
src/nodes/Bitwise/: bitwise.cpp  bitwise.hpp
src/nodes/BlobDetector/: blob_detector.cpp  blob_detector.hpp
src/nodes/Blur/: blur.cpp  blur.hpp
src/nodes/Canny/: canny.cpp  canny.hpp
src/nodes/ColorReduce/: color_reduce.cpp  color_reduce.hpp
src/nodes/Colorcorrect/: ColorCorrect.cpp  ColorCorrect.hpp
src/nodes/Combine/: combine.cpp  combine.hpp
src/nodes/Contours/: contours.cpp  contours.hpp
src/nodes/ConvertColor/: color_types.hpp  convert_color.cpp  convert_color.hpp
src/nodes/CopyMakeBorder/: copy_make_border.cpp  copy_make_border.hpp
src/nodes/Crop/: crop.cpp  crop.hpp
src/nodes/DNN/: dnn_backend_helper.cpp  dnn_backend_helper.hpp  dnn_human_pose.cpp  dnn_human_pose.hpp  dnn_human_pose_helper.cpp  dnn_human_pose_helper.hpp  dnn_image_classification.cpp  dnn_image_classification.hpp  dnn_image_processing.cpp  dnn_image_processing.hpp  dnn_object_detection.cpp  dnn_object_detection.hpp  dnn_segmentation.cpp  dnn_segmentation.hpp  dnn_text_detection.cpp  dnn_text_detection.hpp  dnn_text_recognition.cpp  dnn_text_recognition.hpp
src/nodes/DepthViewer3d/: depth_viewer_3D.cpp  depth_viewer_3D.hpp
src/nodes/DiscreteCosineTransform/: discrete_cosine_transform.cpp  discrete_cosine_transform.hpp
src/nodes/DiscreteFourierTransform/: discrete_fourier_transform.cpp  discrete_fourier_transform.hpp
src/nodes/Divide/: divide.cpp  divide.hpp
src/nodes/DrawTools/: draw_datetime.cpp  draw_datetime.hpp  draw_json.cpp  draw_json.hpp  draw_number.cpp  draw_number.hpp  draw_text.cpp  draw_text.hpp
src/nodes/GetOptimalDft/: get_optimal_dft.cpp  get_optimal_dft.hpp
src/nodes/GetSize/: get_size.cpp  get_size.hpp
src/nodes/HistogramViewer/: histogram_viewer.cpp  histogram_viewer.hpp
src/nodes/HoughCircles/: hough_circles.cpp  hough_circles.hpp
src/nodes/HoughLines/: hough_lines.cpp  hough_lines.hpp
src/nodes/JsonViewer/: json_viewer.cpp  json_viewer.hpp
src/nodes/LaplacianFilter/: laplacian_filter.cpp  laplacian_filter.hpp
src/nodes/LineIntersect/: line_intersect.cpp  line_intersect.hpp
src/nodes/Magnitude/: magnitude.cpp  magnitude.hpp
src/nodes/Max/: max.cpp  max.hpp
src/nodes/Mean/: mean.cpp  mean.hpp
src/nodes/Min/: min.cpp  min.hpp
src/nodes/Morphology/: Morphology.cpp  Morphology.hpp
src/nodes/Multiply/: multiply.cpp  multiply.hpp
src/nodes/Normalize/: normalize.cpp  normalize.hpp
src/nodes/PerspectiveWarp/: perspective_warp.cpp  perspective_warp.hpp
src/nodes/Resize/: resize.cpp  resize.hpp
src/nodes/RndNoise/: rnd_noise.cpp  rnd_noise.hpp
src/nodes/ScaleAbs/: scale_abs.cpp  scale_abs.hpp
src/nodes/ScharrFilter/: scharr_filter.cpp  scharr_filter.hpp
src/nodes/Sharpen/: sharpen.cpp  sharpen.hpp
src/nodes/SobelFilter/: sobel_filter.cpp  sobel_filter.hpp
src/nodes/Solid/: solid.cpp  solid.hpp
src/nodes/Split/: split.cpp  split.hpp
src/nodes/Subtract/: subtract.cpp  subtract.hpp
src/nodes/Threshold/: threshold.cpp  threshold.hpp
src/nodes/Transform/: transform.cpp  transform.hpp
src/ui/: app_settings.h  application.h  drawing.cpp  drawing.h  node_editor.cpp  node_editor.h  widgets.h
src/utils/: Settings.cpp  logger.h  settings.cpp  settings.h
(+49 files in other folders)
